tests/gen-test/test_out/generic.txt
error: type mismatch
 --> generic\root.ctl:4:25
  |
4 | fn main -> uint => pass(0)
  |                         ^ mismatch occurred here
  |
  = info: expected 'param 0' but got 'uint'

info: mir repr of functions:


error: no entry points found
 = help: add '#[entry]' to a function that should take this role

